plans: allocation profile and live-set growth at 22,500
NOTHING WAS RE-RECORDED. settings=profile already enables
jdk.ObjectAllocationSample at a 300/s throttle with stack traces
(lib/jfr/profile.jfc, quoted in profile-cell.sh's own header), so the
allocation tables come off the very recordings the previous commit's
CPU tables came off -- one run described two ways rather than two runs
compared. 43,065 allocation samples at 7,500 and 134,379 at 22,500,
which is not a thin sample and needed no throttle raise.

Estimated total allocation is 61.4 GB for the 7,500 generate and
217.4 GB for the 22,500 one. At 22,500 TWO FRAMES ARE HALF OF IT:
decide$eval10038$fn__10041 at 29.98% and decide$eval10066$fn__10069 at
21.01%, which resolve to decide :bed-swap (decide.clj:1414) and decide
:merge (decide.clj:1449). Both build an `eligible` list by scanning the
whole :patients map per event, and :merge additionally answers
already-merged? with a `some` over the entire :ground-truth log. The
class table agrees with the frame table rather than merely accompanying
it: PersistentVector$ChunkedSeq, PersistentHashMap$ArrayNode$Seq,
LazySeq and PersistentHashMap$NodeSeq are 34.7% between them, which is
what seq-over-hashmap scanning allocates.

THE -Xmx8g RUN'S INVARIANT HOLDS. 174,866,696 bytes digesting to
7d105743ebd3ac118e035bb7ca9acb9a6491bfb3a8cc7cab95a5626924478e0a, the
committed 22,500 figure, so an eight-gigabyte heap changes no byte of
the corpus. 402.35 s against the 396.18 s recorded at the default heap.

PEAK RSS ROSE TO 4,780 MB FROM 3,599 MB when the heap budget rose,
which settles what that reading is: it measures the budget G1 was given,
not the memory the run needs. No Full GC occurred in 480 collections.
The post-collection floor grows LINEARLY with events to about 430 MB by
the end of the simulation loop and sits at 804 MB once the last pass is
done -- the world's own live set, log included, is under a gigabyte at
22,500 arrivals.

THE 3,863 MB PEAK IS NOT THE WORLD 